--- a/premier.html
+++ b/premier.html
@@ -24,109 +24,233 @@
                  <th id="w">W</th>
                  <th id="d">D</th>
                  <th id="l">L</th>
-                 <th id="l">Pts</th>
+                 <th id="pts">Pts</th>
+                 <th id="gf">GF</th>
+                 <th id="ga">GA</th>
+                 <th id="gd">GD</th>
              </tr>
          </thead>
          <tbody>
              <tr>
                  <td scope="mancity">Man city</td>
-                 <td></td>
-                 <td></td>
+                 <td>37</td>
+                 <td>28</td>
+                 <td>6</td>
+                 <td>3</td>
+                 <td>90</td>
+                 <td>96</td>
+                 <td>24</td>
+                 <td>72</td>
              </tr>
              <tr>
                  <td scope="liverpool">Liverpool</td>
-                 <td></td>
-                 <td></td>            
+                 <td>36</td>
+                 <td>26</td>            
+                 <td>8</td>
+                 <td>2</td>
+                 <td>86</td>
+                 <td>89</td>
+                 <td>24</td>
+                 <td>65</td>
              </tr>
              <tr>
                 <td scope="chelsea">Chelsea</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>20</td>            
+                <td>10</td>
+                <td>6</td>
+                <td>70</td>
+                <td>73</td>
+                <td>31</td>
+                <td>42</td>
             </tr>
             <tr>
                 <td scope="arsenal">Arsenal</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>21</td>
+                <td>5</td>
+                <td>11</td>
+                <td>68</td>            
+                <td>64</td>
+                <td>40</td>
+                <td>24</td>
             </tr>
             <tr>
                 <td scope="tottenham">Tottenham</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>21</td>            
+                <td>3</td>
+                <td>13</td>
+                <td>66</td>
+                <td>56</td>
+                <td>47</td>
+                <td>7</td>
             </tr>
             <tr>
                 <td scope="man-u">Manchester United</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>16</td>
+                <td>10</td>
+                <td>11</td>
+                <td>58</td>
+                <td>57</td>
+                <td>56</td>            
+                <td>1</td>
             </tr>
             <tr>
                 <td scope="west">West Ham</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>16</td>
+                <td>8</td>            
+                <td>13</td>
+                <td>51</td>
+                <td>59</td>
+                <td>48</td>
+                <td>11</td>
             </tr>
             <tr>
                 <td scope="wolve">Wolves</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>15</td>
+                <td>6</td>
+                <td>16</td>
+                <td>51</td>
+                <td>37</td>
+                <td>40</td>            
+                <td>-3</td>
             </tr>
             <tr>
                 <td scope="lei">leicester</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>13</td>            
+                <td>9</td>
+                <td>14</td>
+                <td>48</td>
+                <td>57</td>
+                <td>57</td>
+                <td>0</td>
             </tr>
             <tr>
                 <td scope="brig">Brighton</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>11</td>
+                <td>15</td>
+                <td>11</td>
+                <td>48</td>
+                <td>39</td>            
+                <td>43</td>
+                <td>-4</td>
             </tr>
             <tr>
                 <td scope="brentford">Brentford</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>13</td>            
+                <td>7</td>
+                <td>17</td>
+                <td>46</td>
+                <td>47</td>
+                <td>54</td>
+                <td>-7</td>
             </tr>
             <tr>
                 <td scope="crystal">Crystal palace</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>12</td>
+                <td>10</td>            
+                <td>15</td>
+                <td>46</td>
+                <td>42</td>
+                <td>61</td>
+                <td>-19</td>
+                
             </tr>
             <tr>
                 <td scope="aston">Aston villa</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>10</td>
+                <td>15</td>            
+                <td>11</td>
+                <td>45</td>
+                <td>47</td>
+                <td>43</td>
+                <td>4</td>
             </tr>
             <tr>
                 <td scope="new">Newcastle</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>13</td>            
+                <td>5</td>
+                <td>18</td>
+                <td>44</td>
+                <td>49</td>
+                <td>50</td>
+                <td>-1</td>
             </tr>
             <tr>
                 <td scope="south">Southampton</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>9</td>            
+                <td>13</td>
+                <td>14</td>
+                <td>40</td>
+                <td>41</td>
+                <td>61</td>
+                <td>-20</td>
             </tr>
             <tr>
                 <td scope="ever">Everton</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>10</td>
+                <td>6</td>
+                <td>20</td>
+                <td>36</td>
+                <td>39</td>
+                <td>59</td>
+                <td>-20</td>            
             </tr>
             <tr>
                 <td scope="leeds">Leeds</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>8</td>            
+                <td>11</td>
+                <td>18</td>
+                <td>35</td>
+                <td>40</td>
+                <td>78</td>
+                <td>-38</td>
             </tr>
             <tr>
                 <td scope="brn">Burnley</td>
-                <td></td>
-                <td></td>            
+                <td>36</td>
+                <td>7</td>
+                <td>13</td>
+                <td>16</td>
+                <td>34</td>
+                <td>32</td>
+                <td>50</td>
+                <td>-18</td>            
             </tr>
             <tr>
                 <td scope="wat">Watford</td>
-                <td></td>
-                <td></td>            
+                <td>37</td>
+                <td>6</td>            
+                <td>5</td>
+                <td>26</td>
+                <td>23</td>
+                <td>33</td>
+                <td>75</td>
+                <td>-42</td>
             </tr>
             <tr>
-                <td scope="norw">Norwich</td>
-                <td></td>
-                <td></td>            
+                <td scope="norw">Norwich City</td>
+                <td>37</td>
+                <td>5</td>            
+                <td>7</td>
+                <td>25</td>
+                <td>22</td>
+                <td>23</td>
+                <td>79</td>
+                <td>-56</td>
             </tr>
          </tbody>
      </table>
