added more club logo

--- a/premier.html
+++ b/premier.html
@@ -32,7 +32,7 @@
          </thead>
          <tbody>
              <tr>
-                 <td scope="mancity">Man city</td>
+                 <td scope="mancity"> <img src="/pics/mancity.png" alt=""> Man city</td>
                  <td>37</td>
                  <td>28</td>
                  <td>6</td>
@@ -43,7 +43,7 @@
                  <td>72</td>
              </tr>
              <tr>
-                 <td scope="liverpool">Liverpool</td>
+                 <td scope="liverpool"> <img src="/pics/liverpool.png" alt=""> Liverpool</td>
                  <td>36</td>
                  <td>26</td>            
                  <td>8</td>
@@ -54,7 +54,7 @@
                  <td>65</td>
              </tr>
              <tr>
-                <td scope="chelsea">Chelsea</td>
+                <td scope="chelsea"> <img src="/pics/chelsea.png" alt=""> Chelsea</td>
                 <td>36</td>
                 <td>20</td>            
                 <td>10</td>
@@ -65,7 +65,7 @@
                 <td>42</td>
             </tr>
             <tr>
-                <td scope="arsenal">Arsenal</td>
+                <td scope="arsenal"> <img src="/pics/arsenal.png" alt=""> Arsenal</td>
                 <td>37</td>
                 <td>21</td>
                 <td>5</td>
@@ -76,7 +76,7 @@
                 <td>24</td>
             </tr>
             <tr>
-                <td scope="tottenham">Tottenham</td>
+                <td scope="tottenham"> <img src="/pics/tottenham.png" alt=""> Tottenham</td>
                 <td>37</td>
                 <td>21</td>            
                 <td>3</td>
@@ -87,7 +87,7 @@
                 <td>7</td>
             </tr>
             <tr>
-                <td scope="man-u">Manchester United</td>
+                <td scope="man-u"><img src="/pics/manu.png" alt="">Manchester United</td>
                 <td>37</td>
                 <td>16</td>
                 <td>10</td>
@@ -98,7 +98,7 @@
                 <td>1</td>
             </tr>
             <tr>
-                <td scope="west">West Ham</td>
+                <td scope="west"> <img src="/pics/" alt=""> West Ham</td>
                 <td>37</td>
                 <td>16</td>
                 <td>8</td>            
