--- a/premier.html
+++ b/premier.html
@@ -98,7 +98,7 @@
                 <td>1</td>
             </tr>
             <tr>
-                <td scope="west"> <img src="/pics/" alt=""> West Ham</td>
+                <td scope="west"> <img src="/pics/westham.png" alt=""> West Ham</td>
                 <td>37</td>
                 <td>16</td>
                 <td>8</td>            
@@ -109,7 +109,7 @@
                 <td>11</td>
             </tr>
             <tr>
-                <td scope="wolve">Wolves</td>
+                <td scope="wolve"> <img src="/pics/wolves.png" alt=""> Wolves</td>
                 <td>37</td>
                 <td>15</td>
                 <td>6</td>
@@ -120,7 +120,7 @@
                 <td>-3</td>
             </tr>
             <tr>
-                <td scope="lei">leicester</td>
+                <td scope="lei"> <img src="/pics/leicester.png" alt=""> leicester</td>
                 <td>36</td>
                 <td>13</td>            
                 <td>9</td>
@@ -131,7 +131,7 @@
                 <td>0</td>
             </tr>
             <tr>
-                <td scope="brig">Brighton</td>
+                <td scope="brig"> <img src="/pics/bright.png" alt=""> Brighton</td>
                 <td>37</td>
                 <td>11</td>
                 <td>15</td>
@@ -142,7 +142,7 @@
                 <td>-4</td>
             </tr>
             <tr>
-                <td scope="brentford">Brentford</td>
+                <td scope="brentford"> <img src="/pics/brentford.png" alt=""> Brentford</td>
                 <td>37</td>
                 <td>13</td>            
                 <td>7</td>
@@ -153,7 +153,7 @@
                 <td>-7</td>
             </tr>
             <tr>
-                <td scope="crystal">Crystal palace</td>
+                <td scope="crystal"> <img src="/pics/crystal.png" alt=""> Crystal palace</td>
                 <td>37</td>
                 <td>12</td>
                 <td>10</td>            
@@ -165,7 +165,7 @@
                 
             </tr>
             <tr>
-                <td scope="aston">Aston villa</td>
+                <td scope="aston"> <img src="/pics/aston.png" alt=""> Aston villa</td>
                 <td>36</td>
                 <td>10</td>
                 <td>15</td>            
@@ -176,7 +176,7 @@
                 <td>4</td>
             </tr>
             <tr>
-                <td scope="new">Newcastle</td>
+                <td scope="new"> <img src="/pics/newcastle.png" alt=""> Newcastle</td>
                 <td>36</td>
                 <td>13</td>            
                 <td>5</td>
@@ -187,7 +187,7 @@
                 <td>-1</td>
             </tr>
             <tr>
-                <td scope="south">Southampton</td>
+                <td scope="south"> <img src="/pics/southampton.png" alt=""> Southampton</td>
                 <td>36</td>
                 <td>9</td>            
                 <td>13</td>
@@ -198,7 +198,7 @@
                 <td>-20</td>
             </tr>
             <tr>
-                <td scope="ever">Everton</td>
+                <td scope="ever"> <img src="/pics/everton.png" alt=""> Everton</td>
                 <td>36</td>
                 <td>10</td>
                 <td>6</td>
@@ -209,7 +209,7 @@
                 <td>-20</td>            
             </tr>
             <tr>
-                <td scope="leeds">Leeds</td>
+                <td scope="leeds"> <img src="/pics/leeds.png" alt=""> Leeds</td>
                 <td>37</td>
                 <td>8</td>            
                 <td>11</td>
@@ -220,7 +220,7 @@
                 <td>-38</td>
             </tr>
             <tr>
-                <td scope="brn">Burnley</td>
+                <td scope="brn"> <img src="/pics/burnley.png" alt=""> Burnley</td>
                 <td>36</td>
                 <td>7</td>
                 <td>13</td>
@@ -231,7 +231,7 @@
                 <td>-18</td>            
             </tr>
             <tr>
-                <td scope="wat">Watford</td>
+                <td scope="wat"> <img src="/pics/watford.png" alt=""> Watford</td>
                 <td>37</td>
                 <td>6</td>            
                 <td>5</td>
@@ -242,7 +242,7 @@
                 <td>-42</td>
             </tr>
             <tr>
-                <td scope="norw">Norwich City</td>
+                <td scope="norw"> <img src="/pics/norwich.png" alt=""> Norwich City</td>
                 <td>37</td>
                 <td>5</td>            
                 <td>7</td>
