added some footer feature

--- a/premier.html
+++ b/premier.html
@@ -8,8 +8,9 @@
     <title>premier league</title>
 </head>
 <body>
-     <img src="/pics/logo.png" alt="">
+    
      <ul>
+        <img src="/pics/logo.png" alt="">
          <li><a href="#" class>Home</a></li>
          <li><a href="#">Features</a></li>
          <li><a href="#">Goals</a></li>
@@ -37,7 +38,7 @@
                  <td>28</td>
                  <td>6</td>
                  <td>3</td>
-                 <td>90</td>
+                 <td id="vue">90</td>
                  <td>96</td>
                  <td>24</td>
                  <td>72</td>
@@ -48,7 +49,7 @@
                  <td>26</td>            
                  <td>8</td>
                  <td>2</td>
-                 <td>86</td>
+                 <td id="vue">86</td>
                  <td>89</td>
                  <td>24</td>
                  <td>65</td>
@@ -59,7 +60,7 @@
                 <td>20</td>            
                 <td>10</td>
                 <td>6</td>
-                <td>70</td>
+                <td id="vue">70</td>
                 <td>73</td>
                 <td>31</td>
                 <td>42</td>
@@ -70,7 +71,7 @@
                 <td>21</td>
                 <td>5</td>
                 <td>11</td>
-                <td>68</td>            
+                <td id="vue">68</td>            
                 <td>64</td>
                 <td>40</td>
                 <td>24</td>
@@ -81,7 +82,7 @@
                 <td>21</td>            
                 <td>3</td>
                 <td>13</td>
-                <td>66</td>
+                <td id="vue">66</td>
                 <td>56</td>
                 <td>47</td>
                 <td>7</td>
@@ -92,7 +93,7 @@
                 <td>16</td>
                 <td>10</td>
                 <td>11</td>
-                <td>58</td>
+                <td id="vue">58</td>
                 <td>57</td>
                 <td>56</td>            
                 <td>1</td>
@@ -103,7 +104,7 @@
                 <td>16</td>
                 <td>8</td>            
                 <td>13</td>
-                <td>51</td>
+                <td id="vue">51</td>
                 <td>59</td>
                 <td>48</td>
                 <td>11</td>
@@ -114,7 +115,7 @@
                 <td>15</td>
                 <td>6</td>
                 <td>16</td>
-                <td>51</td>
+                <td id="vue">51</td>
                 <td>37</td>
                 <td>40</td>            
                 <td>-3</td>
@@ -125,7 +126,7 @@
                 <td>13</td>            
                 <td>9</td>
                 <td>14</td>
-                <td>48</td>
+                <td id="vue">48</td>
                 <td>57</td>
                 <td>57</td>
                 <td>0</td>
@@ -136,7 +137,7 @@
                 <td>11</td>
                 <td>15</td>
                 <td>11</td>
-                <td>48</td>
+                <td id="vue">48</td>
                 <td>39</td>            
                 <td>43</td>
                 <td>-4</td>
@@ -147,7 +148,7 @@
                 <td>13</td>            
                 <td>7</td>
                 <td>17</td>
-                <td>46</td>
+                <td id="vue">46</td>
                 <td>47</td>
                 <td>54</td>
                 <td>-7</td>
@@ -158,7 +159,7 @@
                 <td>12</td>
                 <td>10</td>            
                 <td>15</td>
-                <td>46</td>
+                <td id="vue">46</td>
                 <td>42</td>
                 <td>61</td>
                 <td>-19</td>
@@ -170,7 +171,7 @@
                 <td>10</td>
                 <td>15</td>            
                 <td>11</td>
-                <td>45</td>
+                <td id="vue">45</td>
                 <td>47</td>
                 <td>43</td>
                 <td>4</td>
@@ -181,7 +182,7 @@
                 <td>13</td>            
                 <td>5</td>
                 <td>18</td>
-                <td>44</td>
+                <td id="vue">44</td>
                 <td>49</td>
                 <td>50</td>
                 <td>-1</td>
@@ -192,7 +193,7 @@
                 <td>9</td>            
                 <td>13</td>
                 <td>14</td>
-                <td>40</td>
+                <td id="vue">40</td>
                 <td>41</td>
                 <td>61</td>
                 <td>-20</td>
@@ -203,7 +204,7 @@
                 <td>10</td>
                 <td>6</td>
                 <td>20</td>
-                <td>36</td>
+                <td id="vue">36</td>
                 <td>39</td>
                 <td>59</td>
                 <td>-20</td>            
@@ -214,7 +215,7 @@
                 <td>8</td>            
                 <td>11</td>
                 <td>18</td>
-                <td>35</td>
+                <td id="vue">35</td>
                 <td>40</td>
                 <td>78</td>
                 <td>-38</td>
@@ -225,7 +226,7 @@
                 <td>7</td>
                 <td>13</td>
                 <td>16</td>
-                <td>34</td>
+                <td id="vue">34</td>
                 <td>32</td>
                 <td>50</td>
                 <td>-18</td>            
@@ -236,7 +237,7 @@
                 <td>6</td>            
                 <td>5</td>
                 <td>26</td>
-                <td>23</td>
+                <td id="vue">23</td>
                 <td>33</td>
                 <td>75</td>
                 <td>-42</td>
@@ -247,12 +248,22 @@
                 <td>5</td>            
                 <td>7</td>
                 <td>25</td>
-                <td>22</td>
+                <td id="vue">22</td>
                 <td>23</td>
                 <td>79</td>
                 <td>-56</td>
             </tr>
          </tbody>
      </table>
-</body>
+     <hr>
+     <h1>Qualification/Relegation</h1>
+     <div class="uefa"></div><p id="green">UEFA Champions League Group Stage</p>
+     <div class="europa"></div><p id="orange">Europa League Group Stage</p>
+     <div class="confer"></div><p id="white">Europa Conference Qualificaion</p>
+     <div class="rel"></div><p id="red">Relegation</p>
+     
+
+     <hr>
+     <footer>&#x00A9; by Rankshow 2022</footer>
+    </body>
 </html>
